question_2/k8s-manifests/00-namespace.yaml
# 建立"asiayo" 的 Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: asiayo
